Fixed Bug #70797 (Error while making PHP7)

error: ‘for’ loop initial declarations are only allowed in C99 mode